feat(api): add security skeleton config
